nginx-ingress-static-ip.yaml
# https://cloud.google.com/kubernetes-engine/docs/tutorials/configuring-domain-name-static-ip#use_an_ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portal
  annotations:
    kubernetes.io/ingress.global-static-ip-name: portal
    cloud.google.com/backend-config: '{"default": "nginx-ingress-backendconfig"}'
  labels:
    app: portal
spec:
  defaultBackend:
    service:
      name: portal-nginx
      port:
        number: 80
